--- a/styles.css
+++ b/styles.css
@@ -8,6 +8,15 @@
   background-color: #1F2937;
 }
 
+.header {
+  height: 200px;
+  display: flex;
+  justify-content: space-between;
+  align-items: baseline;
+  line-height: 3;
+  margin: 0 200px;
+}
+
 .headerLogo {
   font-size: 24px;
   color: #F9FAF8;
@@ -16,5 +25,14 @@
 .headerLink {
   font-size: 18px;
   color: #E5E7EB;
+  display: flex;
+}
+
+ul {
+  list-style-type: none;
+}
+
+li {
+  margin: 0 10px;
 }
 
