--- a/styles.css
+++ b/styles.css
@@ -36,3 +36,42 @@ li {
   margin: 0 10px;
 }
 
+.sectionOneBottom {
+  display: flex; 
+}
+
+.sectionOneBottomCol {
+  flex: 1;
+
+  padding: 4em 1em;
+  border: solid;
+  margin: 20px; 
+
+}
+
+
+.hero-text {
+  font-size: 48px;
+  font-weight: bolder;
+  color: #F9FAF8;
+}
+
+.hero-image {
+  max-width: 100%;
+  max-height: 100%;
+  display: block;
+  object-fit: contain;
+  width: 150px;
+  height: 50px;   
+}
+
+img {
+  width: auto ;
+  max-height:max-content;
+  max-width: fit-content;
+}
+
+.hero-button {
+  background-color: #3882F6;
+  color: #F9FAF8;
+}
