--- a/styles.css
+++ b/styles.css
@@ -37,32 +37,31 @@ li {
 }
 
 .sectionOneBottom {
-  display: flex; 
-}
+  display: flex;
+  width: 60%;
+align-items: center;}
 
 .sectionOneBottomCol {
   flex: 1;
 
-  padding: 4em 1em;
   border: solid;
   margin: 20px; 
 
 }
 
 
-.hero-text {
+.hero-title {
   font-size: 48px;
   font-weight: bolder;
   color: #F9FAF8;
 }
+.hero-text {
+  font-size: 18px;
+  color: #E5E7EB;
+}
 
-.hero-image {
+.hero-image img{
   max-width: 100%;
-  max-height: 100%;
-  display: block;
-  object-fit: contain;
-  width: 150px;
-  height: 50px;   
 }
 
 img {
